plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/top-mpp/src/jsMain/kotlin/transitiveStory/bottomActual/mppBeginning/sourceSetName.kt
package transitiveStory.bottomActual.mppBeginning

actual val <!LINE_MARKER("descr='Has expects in multimod-hmpp.top-mpp.commonMain module'")!>sourceSetName<!>: String = "jsMain"
